compiler/tools/fpp-check/test/state_machine/initial_transitions/choice_cycle.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/choice_cycle.fpp:4.3
  choice C { if g enter C else enter C }
  ^
error: encountered a junction cycle:
  junction transition at [ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/choice_cycle.fpp:4.19 to junction C
